--- a/NotFacebook-main/CSS/Index.css
+++ b/NotFacebook-main/CSS/Index.css
@@ -1,20 +1,59 @@
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+}
 .main{
     width: 100%;
-    height: 250px;
     max-width: 1200px;
     margin: 20px auto;
     padding: 20px;
-    background-color: #f9f9f9;
+    background-color: green;
     border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 5px;
+    justify-content: center;
+}
+.image{
+    object-fit: cover;
+    border-radius: 1px;
+    border: 1px solid #ddd;
     
 }
-.img{
-    display:flex;
-    flex-direction: column;
-    align-items: center;
+.btn{
+    background-color: green;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 14px;
+}
+.btn:hover{
+    background-color: #36a420;
+}
+h1 {
+    margin-bottom: 20px;
+    font-size: 24px;
+    color: #333;
+    display: flex;
+    flex-direction: ;
+}
+
+.password{
+display: block;
+text-align: left;
+font-size: 14px;
+}
+.forgot-password {
+    margin-left: 20px; 
+    color: #007BFF;
+    text-decoration: none;
+    font-size: 10px;
 }
