--- a/NotFacebook-main/CSS/Index.css
+++ b/NotFacebook-main/CSS/Index.css
@@ -52,8 +52,7 @@ text-align: left;
 font-size: 14px;
 }
 .forgot-password {
-    margin-left: 20px; 
-    color: #007BFF;
-    text-decoration: none;
-    font-size: 10px;
+    display: flex; 
+    justify-content: right;
+    gap: 5px;
 }
