--- a/NotFacebook-main/CSS/forgotpassword.css
+++ b/NotFacebook-main/CSS/forgotpassword.css
@@ -6,7 +6,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #033310;
+    background-color: #20d450;
 }
 .change-password {
     width: 300px;
@@ -15,14 +15,21 @@ body {
     background-color: white;
     
 }
-.form-group input {
+.form input {
     width: 100%;
     padding: 10px;
-    border: 5px solid #042404;
+    border: 5px solid #0ee40e;
     border-radius: 5px;
     outline: none;
     font-size: 14px;
 }
-.form-group input:focus {
+.form input:focus {
     border-color: #052f14;
+}
+button{
+    display: block;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #20d450;
+    
 }
