--- a/NotFacebook-main/CSS/Style.css
+++ b/NotFacebook-main/CSS/Style.css
@@ -9,7 +9,7 @@
 }
 
 nav {
-    background-color: #548b54;
+    background-color: #4267B2;
     display: flex;
     justify-content: space-between;
 }
@@ -141,7 +141,7 @@ textarea.input-box {
     font-size: 14px;
     font-weight: bold;
     color: #fff;
-    background-color: #42b72a;
+    background-color: #4267B2;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -150,10 +150,11 @@ textarea.input-box {
 
 .submit-button i {
     margin-right: 5px;
+    
 }
 
 .submit-button:hover {
-    background-color: #36a420;
+    background-color: lightblue;
 }
 
 .slider {
@@ -244,6 +245,8 @@ textarea.input-box {
     margin: 0;
     vertical-align: middle;
     line-height: 50px;
+    display: flex;
+    text-align: right;
 }
 
 ._row {
