--- a/NotFacebook-main/CSS/forgotpassword.css
+++ b/NotFacebook-main/CSS/forgotpassword.css
@@ -6,7 +6,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #20d450;
+    background-color: #4267B2;
 }
 .change-password {
     width: 300px;
@@ -32,4 +32,7 @@ button{
     justify-content: center;
     background-color: #20d450;
     
+}
+h3{
+    margin-left: 50px;
 }
