--- a/NotFacebook-main/CSS/Style.css
+++ b/NotFacebook-main/CSS/Style.css
@@ -337,11 +337,12 @@ textarea.input-box {
 
 
 .nav-options ul {
-    list-style-type: none;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     margin: 0;
     padding: 0;
-    display: flex;
-    gap: 15px;
+    list-style: none;
 }
 
 .nav-options ul li {
