--- a/NotFacebook-main/CSS/Splash.css
+++ b/NotFacebook-main/CSS/Splash.css
@@ -1,13 +1,30 @@
-body{
-    background-color: white;
+.splash {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100px;
+    height: 100px;
+    background: white;
+    border-radius: 50%;
+    animation: splashAnimation 2s ease-out forwards;
+    
+}
+.logo{
+    font-size: 20px;
+    color: #4267B2; 
 }
 
-img{
-    transition: visibility 0s 1s;
-    align-items: center;
-    flex-direction: row;
-    border-radius: 50%;
-    margin-top: 50px;
-    margin-left: 350px;
-    transition: 3s;
+@keyframes splashAnimation {
+    0% {
+    transform: scale(0);
+    opacity: 0;
+    }
+    50% {
+    transform: scale(1);
+    opacity: 0.5;
+    }
+    100% {
+    transform: scale(2);
+    opacity: 1;
+    }
 }
